ci: remove simplified PR template and update CI workflows
- Deleted the simplified pull request template to streamline the contribution process.
- Updated CI workflows to adjust job dependencies and scheduling, including:
  - Changed security scan job dependency from 'security-scan' to 'security'.
  - Modified community health and merge queue workflows to manual triggers only.
  - Adjusted Docker security scan to run weekly instead of daily and added push triggers for specific paths.
  - Updated performance benchmarks and multi-environment testing workflows for better resource management and compatibility.
  - Removed the Trivy scan workflow as part of cleanup efforts.

--- a/.github/workflows/docker-security-scan.yml
+++ b/.github/workflows/docker-security-scan.yml
@@ -2,9 +2,14 @@ name: "Docker Security Scan"
 
 on:
   schedule:
-    # Run daily at 02:00 UTC
-    - cron: '0 2 * * *'
+    # Run weekly on Mondays at 02:00 UTC (reduced from daily)
+    - cron: '0 2 * * 1'
   workflow_dispatch: # Allow manual triggering
+  push:
+    branches: [main]
+    paths:
+      - 'docker/**'
+      - 'Dockerfile'
 
 permissions:
   contents: read
@@ -14,7 +19,7 @@ jobs:
   docker-scan:
     name: Docker Security Scan
     runs-on: ubuntu-latest
-    if: github.repository == 'shugur/relay' # Only run on main repository
+    if: github.repository == 'Shugur-Network/relay' # Only run on main repository
     
     strategy:
       matrix:
