--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -3,6 +3,12 @@ name: Release Please
 on:
   push:
     branches: [main]
+    paths-ignore:
+      - '**/*.md'
+      - '.github/**'
+      - 'docker/**'
+      - 'docs/**'
+      - 'config/**'
   workflow_dispatch:
 
 permissions:
