--- a/.github/workflows/community-health.yml
+++ b/.github/workflows/community-health.yml
@@ -1,9 +1,9 @@
 name: "Community Health Report"
 
 on:
-  schedule:
-    - cron: '0 6 * * 1'  # Every Monday at 6 AM UTC
-  workflow_dispatch:
+  workflow_dispatch:  # Manual trigger only - not needed for solo development
+  # schedule:
+  #   - cron: '0 6 * * 1'  # Every Monday at 6 AM UTC
 
 permissions:
   contents: read
