--- a/.github/workflows/validate-pr-title.yml
+++ b/.github/workflows/validate-pr-title.yml
@@ -15,28 +15,27 @@ jobs:
     name: Validate PR title
     runs-on: ubuntu-latest
     steps:
-      - uses: amannn/action-semantic-pull-request@v5.5.3
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v4
+      - name: Validate PR title
+        uses: actions/github-script@v7
         with:
-          # Configure types based on your conventional commit standards
-          types: |
-            fix
-            feat
-            docs
-            style
-            refactor
-            perf
-            test
-            build
-            ci
-            chore
-            revert
-          # Require scope for certain types
-          requireScope: false
-          # Validate subject case
-          subjectPattern: ^(?![A-Z]).+$
-          subjectPatternError: |
-            The subject "{subject}" found in the pull request title "{title}"
-            didn't match the configured pattern. Please ensure that the subject
-            doesn't start with an uppercase character.
+          script: |
+            const title = context.payload.pull_request.title;
+            const validTypes = ['fix', 'feat', 'docs', 'style', 'refactor', 'perf', 'test', 'build', 'ci', 'chore', 'revert'];
+            
+            // Check if title follows conventional commit format
+            const conventionalCommitRegex = /^(fix|feat|docs|style|refactor|perf|test|build|ci|chore|revert)(\(.+\))?: .+/;
+            
+            if (!conventionalCommitRegex.test(title)) {
+              core.setFailed(`PR title "${title}" does not follow conventional commit format. Expected format: "type(scope): description" where type is one of: ${validTypes.join(', ')}`);
+              return;
+            }
+            
+            // Check that subject doesn't start with uppercase
+            const match = title.match(/^[a-z]+(\(.+\))?: (.+)/);
+            if (match && match[2] && /^[A-Z]/.test(match[2])) {
+              core.setFailed(`PR title subject "${match[2]}" should not start with an uppercase character. Please use lowercase for the first word.`);
+              return;
+            }
+            
+            console.log(`✅ PR title "${title}" is valid`);
