--- a/.github/workflows/multi-env-testing.yml
+++ b/.github/workflows/multi-env-testing.yml
@@ -18,7 +18,6 @@ jobs:
     name: Test on ${{ matrix.os }} with Go ${{ matrix.go-version }}
     runs-on: ${{ matrix.os }}
     timeout-minutes: 45
-    if: ${{ !matrix.weekly_only || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' }}
     
     strategy:
       fail-fast: false
@@ -45,7 +44,6 @@ jobs:
     services:
       cockroach:
         image: cockroachdb/cockroach:v24.1.5
-        if: matrix.database == 'cockroach'
         env:
           COCKROACH_DATABASE: relay_test
           COCKROACH_USER: root
@@ -61,7 +59,6 @@ jobs:
       
       postgres:
         image: postgres:15
-        if: matrix.database == 'postgres'
         env:
           POSTGRES_DB: relay_test
           POSTGRES_USER: postgres
@@ -77,16 +74,30 @@ jobs:
           - 5432:5432
     
     steps:
+      - name: Check if job should run
+        id: should_run
+        run: |
+          if [[ "${{ matrix.weekly_only }}" == "true" && "${{ github.event_name }}" != "schedule" && "${{ github.event_name }}" != "workflow_dispatch" ]]; then
+            echo "run=false" >> $GITHUB_OUTPUT
+            echo "Skipping weekly-only job for non-scheduled run"
+          else
+            echo "run=true" >> $GITHUB_OUTPUT
+            echo "Running job for ${{ matrix.os }} with ${{ matrix.database }}"
+          fi
+      
       - name: Checkout code
+        if: steps.should_run.outputs.run == 'true'
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       
       - name: Set up Go
+        if: steps.should_run.outputs.run == 'true'
         uses: actions/setup-go@0a12ed9d6a96ab950c8f026ed9f722fe0da7ef32 # v5.0.2
         with:
           go-version: ${{ matrix.go-version }}
           cache: true
       
       - name: Set up database connection
+        if: steps.should_run.outputs.run == 'true'
         run: |
           if [[ "${{ matrix.database }}" == "cockroach" ]]; then
             echo "DB_HOST=localhost:26257" >> $GITHUB_ENV
@@ -107,6 +118,7 @@ jobs:
           fi
       
       - name: Run tests
+        if: steps.should_run.outputs.run == 'true'
         env:
           CGO_ENABLED: 1
           RACE_DETECTOR: ${{ matrix.os == 'ubuntu-latest' && matrix.go-version == '1.24.4' }}
@@ -118,7 +130,7 @@ jobs:
           fi
       
       - name: Run integration tests
-        if: matrix.os == 'ubuntu-latest' && matrix.go-version == '1.24.4'
+        if: steps.should_run.outputs.run == 'true' && matrix.os == 'ubuntu-latest' && matrix.go-version == '1.24.4'
         run: |
           # Run NIP compliance tests
           if [[ -d "tests/nips" ]]; then
@@ -132,7 +144,7 @@ jobs:
           fi
       
       - name: Collect test artifacts
-        if: failure()
+        if: steps.should_run.outputs.run == 'true' && failure()
         run: |
           mkdir -p test-artifacts
           
@@ -153,7 +165,7 @@ jobs:
           ls -la test-artifacts/ || true
       
       - name: Upload test artifacts
-        if: failure()
+        if: steps.should_run.outputs.run == 'true' && failure()
         uses: actions/upload-artifact@b4b15b8c7c6ac21ea08fcf65892d2ee8f75cf882 # v4.4.3
         with:
           name: test-artifacts-${{ matrix.os }}-go${{ matrix.go-version }}-${{ matrix.database }}
