--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -1,21 +1,21 @@
 name: Release Please
 
 on:
-  # Only run on push to main to update release PR (no direct releases)
-  push:
-    branches: [main]
-    paths-ignore:
-      - '**/*.md'
-      - '.github/**'
-      - 'docker/**'
-      - 'docs/**'
-      - 'config/**'
-  # Manual trigger for creating releases
+  # Manual trigger for creating releases and managing release PRs
   workflow_dispatch:
     inputs:
-      release_type:
-        description: 'Type of release to create'
+      action_type:
+        description: 'Action to perform'
         required: true
+        default: 'update-pr'
+        type: choice
+        options:
+          - update-pr
+          - create-prerelease
+          - create-stable-release
+      release_type:
+        description: 'Type of release to create (only for release actions)'
+        required: false
         default: 'prerelease'
         type: choice
         options:
@@ -31,7 +31,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Run release-please (Create/Update PR)
-        if: github.event_name == 'push'
+        if: github.event.inputs.action_type == 'update-pr'
         id: release-pr
         uses: googleapis/release-please-action@7987652d64b4581673a76e33ad5e98e3dd56832f # v4.1.3
         with:
@@ -40,7 +40,7 @@ jobs:
           manifest-file: .release-please-manifest.json
 
       - name: Create prerelease (Manual)
-        if: github.event_name == 'workflow_dispatch' && github.event.inputs.release_type == 'prerelease'
+        if: github.event.inputs.action_type == 'create-prerelease'
         uses: googleapis/release-please-action@7987652d64b4581673a76e33ad5e98e3dd56832f # v4.1.3
         with:
           token: ${{ secrets.RELEASE_PLEASE_TOKEN || secrets.GITHUB_TOKEN }}
@@ -50,7 +50,7 @@ jobs:
           prerelease: true
 
       - name: Create stable release (Manual)
-        if: github.event_name == 'workflow_dispatch' && github.event.inputs.release_type == 'stable'
+        if: github.event.inputs.action_type == 'create-stable-release'
         uses: googleapis/release-please-action@7987652d64b4581673a76e33ad5e98e3dd56832f # v4.1.3
         with:
           token: ${{ secrets.RELEASE_PLEASE_TOKEN || secrets.GITHUB_TOKEN }}
