--- a/.github/workflows/dependabot-auto-merge.yml
+++ b/.github/workflows/dependabot-auto-merge.yml
@@ -1,19 +1,6 @@
-name: Dependabot      - uses: actions/checkout@v4
-      
-      - name: Set up Go (for caching)
-        uses: actions/setup-go@v5
-        with:
-          go-version-file: go.mod
-          cache: true
-      - name: Fetch Dependabot metadata
-        id: meta
-        uses: dependabot/fetch-metadata@v2
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+name: Dependabot Auto-Merge
 
-      - name: Enable auto-merge (squash) for minor/patch updates
-        if: ${{ steps.meta.outputs.update-type == 'version-update:semver-minor' || steps.meta.outputs.update-type == 'version-update:semver-patch' }}
-        uses: peter-evans/enable-pull-request-automerge@v3
+on:
   pull_request:
     types: [opened, synchronize, reopened, labeled]
 
@@ -27,22 +14,23 @@ jobs:
     if: github.actor == 'dependabot[bot]'
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - uses: actions/checkout@v4
       
       - name: Set up Go (for caching)
-        uses: actions/setup-go@41dfa10bad2bb2ae585af6ee5bb4d7d973ad74ed # v5.1.0
+        uses: actions/setup-go@v5
         with:
           go-version-file: go.mod
           cache: true
+          
       - name: Fetch Dependabot metadata
         id: meta
-        uses: dependabot/fetch-metadata@c9c4182bf1b97fd6f27b293f181ee1dd0f5d2286 # v2.2.0
+        uses: dependabot/fetch-metadata@v2
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Enable auto-merge (squash) for minor/patch updates
         if: ${{ steps.meta.outputs.update-type == 'version-update:semver-minor' || steps.meta.outputs.update-type == 'version-update:semver-patch' }}
-        uses: peter-evans/enable-pull-request-automerge@de7e7e6c6c5ade7c7d96a9c2a5b1aacbaca5b59d # v3.0.0
+        uses: peter-evans/enable-pull-request-automerge@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           merge-method: squash
