feat: simplify release workflow with direct version input
Replace confusing release-please setup with straightforward release creation:

✅ Simple Inputs:
- Direct version input (e.g., 1.3.3-rc.3)
- Optional release notes (auto-generates if empty)
- Clear pre-release checkbox

✅ Clear Process:
- Validates version format
- Checks for duplicate releases
- Updates VERSION file
- Creates Git tag and GitHub release
- Auto-generates changelog from commits

✅ User-Friendly:
- No confusing multiple choice fields
- Clear validation and error messages
- Direct control over version numbers
- Works for both stable and pre-releases

This eliminates the complex release-please configuration and makes
creating releases much more intuitive and predictable.

--- a/.github/workflows/docker-security-scan.yml
+++ b/.github/workflows/docker-security-scan.yml
@@ -39,7 +39,7 @@ jobs:
           docker build -t ${{ matrix.image }} -f docker/Dockerfile .
           
       - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@5681af892cd0159a4d2bdbac5beb4b1ba17dc882 # v0.29.0
+        uses: aquasecurity/trivy-action@0.29.0
         with:
           image-ref: ${{ matrix.image }}
           format: 'sarif'
